# boardgames-2022

./: .gitignore  BoardGames.cpp  CMakeLists.txt  Crossword.cpp  Crossword.h  Games.cpp  Games.h  GamesLib.cpp  GamesLib.h  GamesLib.sln  GamesLibEwa.sln  GamesLibEwa.vcxproj  GamesLibEwa.vcxproj.filters  Menu.cpp  Menu.h  README.md  Source.cpp  Sudoku.cpp  Sudoku.h  TicTacToe.cpp  TicTacToe.h  Window.cpp  game.cpp  generate.bat  instr.txt
BoardGamesApp/: main.cpp
BoardGamesLib/: App.cpp  App.h  Crossword.cpp  Crossword.h  Database.cpp  Database.h  GameWindow.cpp  GameWindow.h  Games.cpp  Games.h  Menu.cpp  Menu.h  Source.cpp  Source2.cpp  Square.h  Stats.cpp  Stats.h  Sudoku.cpp  Sudoku.h  Sudoku2.h  TicTacToe.cpp  TicTacToe.h  User.cpp  User.h  board.cpp  board.h  cross.cpp  cross.h  game.cpp  game.h  tile.cpp  tile.h
BoardGamesUnitTest/: BoardGamesUnitTest.cpp  CrosswordDataUTF.txt  CrosswordTests.cpp  GamesLibTest.cpp  SudokuTests.cpp  TicTacToeTests.cpp  TileUnitTest.cpp  UserTest.cpp  boardUnitTest.cpp
Tests/: GamesLibTest.cpp  GamesLibTest.vcxproj  GamesLibTest.vcxproj.filters
Tests/x64/Debug/: GamesLibTest.pch  vc143.idb
resources/: CrosswordDataUTF.txt  Database.txt  Dokumentacja-Gry-Planszowe.docx  Dokumentacja-Gry-Planszowe__3_.docx
x64/Debug/: GamesLib.ilk  GamesLibEwa.vcxproj.FileListAbsolute.txt  GamesLibTest.exp  vc143.idb
